Particle simulation, rekey crashes blender #30445

Closed
opened 2012-03-04 10:22:59 +01:00 by Sascha Uncia · 4 comments

%%%While creating screenshots for the wiki/manual I also tried testing the information on the page.

I've run into a reoccurring crash where trying to rekey a selected particle path in particle mode "W menu > Rekey" causes blender to crash.

Blender 2.62
Win7 64bit
Plenty of ram and CPU%%%

%%%While creating screenshots for the wiki/manual I also tried testing the information on the page. I've run into a reoccurring crash where trying to rekey a selected particle path in particle mode "W menu > Rekey" causes blender to crash. Blender 2.62 Win7 64bit Plenty of ram and CPU%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I've got a crash here when i'm trying to enter particle edit mode for circle. Probably it's somehow related issues?
Clearing baked cache seems to help here (i can enter particle edit mode and run rekey normally). Maybe crash is caused by missed cache file? Anyway don't think it's nice experience to crash here.
Janne, can you please check this?%%%

%%%I've got a crash here when i'm trying to enter particle edit mode for circle. Probably it's somehow related issues? Clearing baked cache seems to help here (i can enter particle edit mode and run rekey normally). Maybe crash is caused by missed cache file? Anyway don't think it's nice experience to crash here. Janne, can you please check this?%%%
Member

%%%The crash when entering particle mode is now fixed in r45026, but unfortunately the rekey operator was only intended to work with hair, so only possible fix currently was to disable this for non-hair editing. I also disabled a couple of other "only hair" operators such as subdivide and remove doubles if the editable thing is not hair.%%%

%%%The crash when entering particle mode is now fixed in r45026, but unfortunately the rekey operator was only intended to work with hair, so only possible fix currently was to disable this for non-hair editing. I also disabled a couple of other "only hair" operators such as subdivide and remove doubles if the editable thing is not hair.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30445
No description provided.