Fix for [#30445] Particle simulation, rekey crashes blender - Entering particle mode crashed due to missing checks if a particle didn't have any baked keys. - The rekey functionality is only supported for hair, so replaced the operator poll function with the correct one. - Also replaced a couple of other "only hair" operator poll functions to the correct ones.